--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,13 @@
     <script src="https://unpkg.com/@jspsych/plugin-instructions@1.1.2"></script>
     <script src="https://unpkg.com/@jspsych/plugin-survey-html-form@1.1.2"></script>
     <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" type="text/css">
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <script src="config.js"></script>
-    <script src="trial_logic.js"></script>
-    <script src="practice.js"></script>
-    <script src="attention_checks.js"></script>
-    <script src="main_trials.js"></script>
-    <script src="experiment.js"></script>
+    <script src="js/trial_logic.js"></script>
+    <script src="js/practice.js"></script>
+    <script src="js/attention_checks.js"></script>
+    <script src="js/main_trials.js"></script>
+    <script src="js/experiment.js"></script>
 </body>
 </html> 
