12 second duration and added comprehension questions

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <!-- Load experiment modules in logical order -->
     <script src="js/experiment/Experiment.js"></script>
     <script src="js/experiment/Pages.js"></script>
+    <script src="js/experiment/ComprehensionCheck.js"></script>
     <script src="js/experiment/TrialManager.js"></script>
     <script src="js/experiment/TrialRunner.js"></script>
     <script src="js/experiment/DataCollector.js"></script>
