indifference point implementation

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <script src="js/experiment/TrialManager.js"></script>
     <script src="js/experiment/TrialRunner.js"></script>
     <script src="js/experiment/DataCollector.js"></script>
+    <script src="js/experiment/AlphaEstimator.js"></script>
+    <script src="js/experiment/Phase2Generator.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html> 
